--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -13,9 +13,7 @@ jobs:
         runs-on: ubuntu-latest
         timeout-minutes: 30
         permissions:
-            contents: write
-            issues: write
-            pull-requests: write
+            id-token: write
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v3
