--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -14,6 +14,7 @@ jobs:
         timeout-minutes: 30
         permissions:
             id-token: write
+            pages: write
         steps:
             - name: Checkout Repo
               uses: actions/checkout@v3
